<resources>
    <string name="app_name">memory</string>
    <string name="new_game_button_text">New Game</string>
    <string name="continue_game_button_text">Continue Game</string>
    <string name="settings_button_text">Settings</string>
    <string name="statistics_button_text">Statistics</string>
    <string name="help_button_text">Help</string>
    <string name="credits_button_text">Credits</string>
    <string name="exit_game_button_text">Exit Game</string>
    <string name="player">Player</string>
    <string name="return_home_title">Return Home?</string>
    <string name="return_home_body">Do you really want to leave? You can continue later</string>
    <string name="return_home_cancel">Cancel</string>
    <string name="return_home_leave">Leave</string>
    <string name="configure_game_play">Play</string>
    <string name="configure_game_board_size">Board size:</string>
    <string name="configure_game_random_player_order">Random Player Order</string>
    <string name="settings_general">General</string>
    <string name="settings_music">Music</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_language">Language</string>
    <string name="settings_game">Game</string>
    <string name="settings_card_set">Card Set</string>
    <string name="settings_duration_before_cards_turn">Duration before cards turn</string>
    <string name="settings_card_back_design">Card Back Design</string>
    <string name="settings_computer_think_time">Computer think time</string>
    <string name="settings_animations">Animations</string>
    <string name="settings_dark_theme">Dark Theme</string>
    <string name="settings_child_friendly_version">Child friendly version</string>
    <string name="turn">Turn:</string>
    <string name="points">Points</string>
    <string name="settings_save">Save</string>
    <string name="settings_reset_to_default">Reset to default</string>
    <string name="turns_used">Turns</string>
    <string name="human">Human</string>
    <string name="ai_beginner">AI Beginner</string>
    <string name="ai_medium">AI Medium</string>
    <string name="ai_god">AI GOD</string>
    <string name="single_player">Single Player</string>
    <string name="multi_player">Multi Player</string>
    <string name="average_number_of_tries">Average number of turns</string>
    <string name="least_number_of_tries">Least number of turns</string>
    <string name="number_of_games_started">Number of games started</string>
    <string name="number_of_games_finished">Number of games finished</string>
    <string name="game_summary">Game Summary</string>
    <string name="return_home">Return Home</string>
    <string name="see_statistics">See Statistics</string>
</resources>
